--- a/src/pages/PublicMetricsDashboard.page
+++ b/src/pages/PublicMetricsDashboard.page
@@ -1,4 +1,4 @@
-<apex:page showHeader="true" sidebar="true" controller="PublicMetricsController">
+<apex:page showHeader="true" sidebar="true" tabStyle="Public_Metrics__tab" controller="PublicMetricsController">
 	<h1>Public Metrics</h1>
 
 	<table>
