--- a/src/pages/PublicMetrics.page
+++ b/src/pages/PublicMetrics.page
@@ -1,3 +1,3 @@
-<apex:page controller="PublicMetricsDoDML" action="{!doDML}">
+<apex:page controller="PublicMetricsController" action="{!doDML}">
 
 </apex:page>
