--- a/src/pages/MetricSetupReportSelect.page
+++ b/src/pages/MetricSetupReportSelect.page
@@ -3,7 +3,7 @@
 	<apex:pageBlock title="Select a Report" helpTitle="Learn more" helpURL="http://google.com">
 		<apex:pageBlockTable value="{!reports}" var="report">
 			<apex:column headerValue="Report Name">
-				<apex:outputLink value="{!URLFOR($Page.MetricSetupAssistant,null,[id=report.Id])}">
+				<apex:outputLink value="{!URLFOR($Page.MetricSetupAssistant,null,[reportId=report.Id])}">
 					{!report.Name}
 				</apex:outputLink>
 			</apex:column>
